--- a/Untitled5-Copy1.ipynb
+++ b/Untitled5-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -42,14 +40,14 @@
     "                                 )\n",
     "result1 = sub1.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"score\",ascending=False))\n",
     "\n",
-    "sub2 = pd.read_csv('submission2.csv',encoding='utf-8',index_col = False, delimiter='\\,',\n",
+    "sub2 = pd.read_csv('submission2_x.csv',encoding='utf-8',index_col = False, delimiter='\\,',\n",
     "                                 )\n",
     "result2 = sub2.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"score\",ascending=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +56,7 @@
        "-100.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,32 +102,32 @@
        "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
        "      <th>0</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
-       "      <td>0.045854</td>\n",
+       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
+       "      <td>0.042055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>2de05719699a87a5e009cef158b10341</td>\n",
-       "      <td>-0.004416</td>\n",
+       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
+       "      <td>0.035724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>33f41c7c7ded4ff4c1eafb61d1b0b13e</td>\n",
-       "      <td>-0.032056</td>\n",
+       "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
+       "      <td>0.006504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>b9a223fa5d0de6f92aa291483f3214ba</td>\n",
-       "      <td>-0.044184</td>\n",
+       "      <td>dff38c7b1f0d8a6fb106baf05d577b83</td>\n",
+       "      <td>-0.050977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>dff38c7b1f0d8a6fb106baf05d577b83</td>\n",
-       "      <td>-0.054059</td>\n",
+       "      <td>2de05719699a87a5e009cef158b10341</td>\n",
+       "      <td>-0.063718</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -137,21 +135,21 @@
       ],
       "text/plain": [
        "                              user_id                             jd_no  \\\n",
-       "0 0  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
-       "  1  002a5c1d9a6a49a2127bbabe2b1a2f99  2de05719699a87a5e009cef158b10341   \n",
-       "  2  002a5c1d9a6a49a2127bbabe2b1a2f99  33f41c7c7ded4ff4c1eafb61d1b0b13e   \n",
-       "  3  002a5c1d9a6a49a2127bbabe2b1a2f99  b9a223fa5d0de6f92aa291483f3214ba   \n",
-       "  4  002a5c1d9a6a49a2127bbabe2b1a2f99  dff38c7b1f0d8a6fb106baf05d577b83   \n",
+       "0 0  002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
+       "  1  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
+       "  2  002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
+       "  3  002a5c1d9a6a49a2127bbabe2b1a2f99  dff38c7b1f0d8a6fb106baf05d577b83   \n",
+       "  4  002a5c1d9a6a49a2127bbabe2b1a2f99  2de05719699a87a5e009cef158b10341   \n",
        "\n",
        "        score  \n",
-       "0 0  0.045854  \n",
-       "  1 -0.004416  \n",
-       "  2 -0.032056  \n",
-       "  3 -0.044184  \n",
-       "  4 -0.054059  "
+       "0 0  0.042055  \n",
+       "  1  0.035724  \n",
+       "  2  0.006504  \n",
+       "  3 -0.050977  \n",
+       "  4 -0.063718  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,31 +234,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
+       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>2de05719699a87a5e009cef158b10341</td>\n",
+       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
        "      <td>0.988095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>33f41c7c7ded4ff4c1eafb61d1b0b13e</td>\n",
+       "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
        "      <td>0.976190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>b9a223fa5d0de6f92aa291483f3214ba</td>\n",
+       "      <td>dff38c7b1f0d8a6fb106baf05d577b83</td>\n",
        "      <td>0.964286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>dff38c7b1f0d8a6fb106baf05d577b83</td>\n",
+       "      <td>2de05719699a87a5e009cef158b10341</td>\n",
        "      <td>0.952381</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -269,11 +267,11 @@
       ],
       "text/plain": [
        "                            user_id                             jd_no  \\\n",
-       "0  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
-       "1  002a5c1d9a6a49a2127bbabe2b1a2f99  2de05719699a87a5e009cef158b10341   \n",
-       "2  002a5c1d9a6a49a2127bbabe2b1a2f99  33f41c7c7ded4ff4c1eafb61d1b0b13e   \n",
-       "3  002a5c1d9a6a49a2127bbabe2b1a2f99  b9a223fa5d0de6f92aa291483f3214ba   \n",
-       "4  002a5c1d9a6a49a2127bbabe2b1a2f99  dff38c7b1f0d8a6fb106baf05d577b83   \n",
+       "0  002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
+       "1  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
+       "2  002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
+       "3  002a5c1d9a6a49a2127bbabe2b1a2f99  dff38c7b1f0d8a6fb106baf05d577b83   \n",
+       "4  002a5c1d9a6a49a2127bbabe2b1a2f99  2de05719699a87a5e009cef158b10341   \n",
        "\n",
        "       rank  \n",
        "0  1.000000  \n",
@@ -283,7 +281,7 @@
        "4  0.952381  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,32 +347,32 @@
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>1d920657943c874df4c071d00b59b460</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.297619</td>\n",
-       "      <td>0.648810</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.708333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
        "      <td>0.988095</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.994048</td>\n",
+       "      <td>0.988095</td>\n",
+       "      <td>0.988095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
        "      <td>0.976190</td>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>0.845238</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.988095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
        "      <td>0.964286</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>0.940476</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>0.970238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -397,10 +395,10 @@
        "4  002a5c1d9a6a49a2127bbabe2b1a2f99  a9b4d47088734fb953fbdf51c46ae827   \n",
        "\n",
        "     rank_x    rank_y      rank  \n",
-       "0  1.000000  0.297619  0.648810  \n",
-       "1  0.988095  1.000000  0.994048  \n",
-       "2  0.976190  0.714286  0.845238  \n",
-       "3  0.964286  0.916667  0.940476  \n",
+       "0  1.000000  0.416667  0.708333  \n",
+       "1  0.988095  0.988095  0.988095  \n",
+       "2  0.976190  1.000000  0.988095  \n",
+       "3  0.964286  0.976190  0.970238  \n",
        "4  0.952381  0.011905  0.482143  "
       ]
      },
@@ -451,63 +449,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
+       "      <th>2</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.988095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
        "      <td>0.988095</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.994048</td>\n",
+       "      <td>0.988095</td>\n",
+       "      <td>0.988095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
        "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
        "      <td>0.964286</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>0.940476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
        "      <td>0.976190</td>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>0.845238</td>\n",
+       "      <td>0.970238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>6</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>b9a223fa5d0de6f92aa291483f3214ba</td>\n",
-       "      <td>0.702381</td>\n",
-       "      <td>0.964286</td>\n",
-       "      <td>0.833333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>4f31eaaf1629bf822f482be7b2f7a90a</td>\n",
+       "      <td>42049532325f80aeed9186b9c571dd22</td>\n",
        "      <td>0.785714</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.809524</td>\n",
+       "      <td>0.940476</td>\n",
+       "      <td>0.863095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>16df6323cc6584ad2eef33070433c01b</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.821429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               user_id                             jd_no  \\\n",
-       "0 1   002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
-       "  3   002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
-       "  2   002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
-       "  25  002a5c1d9a6a49a2127bbabe2b1a2f99  b9a223fa5d0de6f92aa291483f3214ba   \n",
-       "  11  002a5c1d9a6a49a2127bbabe2b1a2f99  4f31eaaf1629bf822f482be7b2f7a90a   \n",
+       "                              user_id                             jd_no  \\\n",
+       "0 2  002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
+       "  1  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
+       "  3  002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
+       "  6  002a5c1d9a6a49a2127bbabe2b1a2f99  42049532325f80aeed9186b9c571dd22   \n",
+       "  5  002a5c1d9a6a49a2127bbabe2b1a2f99  16df6323cc6584ad2eef33070433c01b   \n",
        "\n",
-       "        rank_x    rank_y      rank  \n",
-       "0 1   0.988095  1.000000  0.994048  \n",
-       "  3   0.964286  0.916667  0.940476  \n",
-       "  2   0.976190  0.714286  0.845238  \n",
-       "  25  0.702381  0.964286  0.833333  \n",
-       "  11  0.785714  0.833333  0.809524  "
+       "       rank_x    rank_y      rank  \n",
+       "0 2  0.976190  1.000000  0.988095  \n",
+       "  1  0.988095  0.988095  0.988095  \n",
+       "  3  0.964286  0.976190  0.970238  \n",
+       "  6  0.785714  0.940476  0.863095  \n",
+       "  5  0.785714  0.857143  0.821429  "
       ]
      },
      "execution_count": 15,
@@ -526,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result[[\"user_id\",\"jd_no\"]].to_csv(\"submission3_vivi.csv\",index=False)"
+    "result[[\"user_id\",\"jd_no\"]].to_csv(\"submission3_huang.csv\",index=False)"
    ]
   },
   {
