--- a/Untitled5-Copy2.ipynb
+++ b/Untitled5-Copy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +33,8 @@
      "text": [
       "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  if __name__ == '__main__':\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:5: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n"
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:5: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:9: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n"
      ]
     }
    ],
@@ -44,12 +45,16 @@
     "\n",
     "sub2 = pd.read_csv('submission2.csv',encoding='utf-8',index_col = False, delimiter='\\,',\n",
     "                                 )\n",
-    "result2 = sub2.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"score\",ascending=False))"
+    "result2 = sub2.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"score\",ascending=False))\n",
+    "\n",
+    "sub3 = pd.read_csv('submission2_x.csv',encoding='utf-8',index_col = False, delimiter='\\,',\n",
+    "                                 )\n",
+    "result3 = sub3.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"score\",ascending=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +63,7 @@
        "-100.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +156,7 @@
        "  4 -0.054059  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +288,7 @@
        "4  0.952381  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,16 +308,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>jd_no</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
+       "      <td>0.988095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
+       "      <td>0.976190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>dff38c7b1f0d8a6fb106baf05d577b83</td>\n",
+       "      <td>0.964286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>2de05719699a87a5e009cef158b10341</td>\n",
+       "      <td>0.952381</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            user_id                             jd_no  \\\n",
+       "0  002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
+       "1  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
+       "2  002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
+       "3  002a5c1d9a6a49a2127bbabe2b1a2f99  dff38c7b1f0d8a6fb106baf05d577b83   \n",
+       "4  002a5c1d9a6a49a2127bbabe2b1a2f99  2de05719699a87a5e009cef158b10341   \n",
+       "\n",
+       "       rank  \n",
+       "0  1.000000  \n",
+       "1  0.988095  \n",
+       "2  0.976190  \n",
+       "3  0.964286  \n",
+       "4  0.952381  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "group_data_table = pd.merge(group_data_sub1,group_data_sub2,how=\"inner\",on=[\"user_id\",\"jd_no\"])"
+    "group_data_sub3 = pd.DataFrame(columns=['user_id','jd_no','rank'])\n",
+    "\n",
+    "for idx, group in result3.groupby(\"user_id\"):\n",
+    "    #group['rank']=rankdata(group['score'])/rankdata(group['score']).max(\n",
+    "    group['rank'] = group['score'].rank(ascending=True, method='min')/group['score'].rank(ascending=True, method='min').max()\n",
+    "    for i in range(0,len(group)):\n",
+    "        group_data_sub3 = group_data_sub3.append({'user_id':group['user_id'].values[i],'jd_no':group['jd_no'].values[i],'rank':group['rank'].values[i]},ignore_index=True)     \n",
+    "        #print(group_data_sub1)\n",
+    "\n",
+    "group_data_sub3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +457,7 @@
        "      <td>1d920657943c874df4c071d00b59b460</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.297619</td>\n",
-       "      <td>0.648810</td>\n",
+       "      <td>0.416667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -358,7 +465,7 @@
        "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
        "      <td>0.988095</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.994048</td>\n",
+       "      <td>0.988095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -366,7 +473,7 @@
        "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
        "      <td>0.976190</td>\n",
        "      <td>0.714286</td>\n",
-       "      <td>0.845238</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -374,7 +481,7 @@
        "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
        "      <td>0.964286</td>\n",
        "      <td>0.916667</td>\n",
-       "      <td>0.940476</td>\n",
+       "      <td>0.976190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -382,7 +489,7 @@
        "      <td>a9b4d47088734fb953fbdf51c46ae827</td>\n",
        "      <td>0.952381</td>\n",
        "      <td>0.011905</td>\n",
-       "      <td>0.482143</td>\n",
+       "      <td>0.011905</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -397,26 +504,137 @@
        "4  002a5c1d9a6a49a2127bbabe2b1a2f99  a9b4d47088734fb953fbdf51c46ae827   \n",
        "\n",
        "     rank_x    rank_y      rank  \n",
-       "0  1.000000  0.297619  0.648810  \n",
-       "1  0.988095  1.000000  0.994048  \n",
-       "2  0.976190  0.714286  0.845238  \n",
-       "3  0.964286  0.916667  0.940476  \n",
-       "4  0.952381  0.011905  0.482143  "
+       "0  1.000000  0.297619  0.416667  \n",
+       "1  0.988095  1.000000  0.988095  \n",
+       "2  0.976190  0.714286  1.000000  \n",
+       "3  0.964286  0.916667  0.976190  \n",
+       "4  0.952381  0.011905  0.011905  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "group_data_table['rank'] = (group_data_table['rank_x']+group_data_table['rank_y'])/2\n",
-    "group_data_table.head()"
+    "group_data_table = pd.merge(group_data_sub1,group_data_sub2,how=\"inner\",on=[\"user_id\",\"jd_no\"])\n",
+    "group_data_table_2 = pd.merge(group_data_table,group_data_sub3,how=\"inner\",on=[\"user_id\",\"jd_no\"])\n",
+    "group_data_table_2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>jd_no</th>\n",
+       "      <th>rank_x</th>\n",
+       "      <th>rank_y</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>rank_z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>1d920657943c874df4c071d00b59b460</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.297619</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
+       "      <td>0.988095</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.988095</td>\n",
+       "      <td>0.992063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.896825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
+       "      <td>0.964286</td>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>0.952381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>a9b4d47088734fb953fbdf51c46ae827</td>\n",
+       "      <td>0.952381</td>\n",
+       "      <td>0.011905</td>\n",
+       "      <td>0.011905</td>\n",
+       "      <td>0.325397</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            user_id                             jd_no  \\\n",
+       "0  002a5c1d9a6a49a2127bbabe2b1a2f99  1d920657943c874df4c071d00b59b460   \n",
+       "1  002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
+       "2  002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
+       "3  002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
+       "4  002a5c1d9a6a49a2127bbabe2b1a2f99  a9b4d47088734fb953fbdf51c46ae827   \n",
+       "\n",
+       "     rank_x    rank_y      rank    rank_z  \n",
+       "0  1.000000  0.297619  0.416667  0.571429  \n",
+       "1  0.988095  1.000000  0.988095  0.992063  \n",
+       "2  0.976190  0.714286  1.000000  0.896825  \n",
+       "3  0.964286  0.916667  0.976190  0.952381  \n",
+       "4  0.952381  0.011905  0.011905  0.325397  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data_table_2['rank_z'] = (group_data_table_2['rank_x']+group_data_table_2['rank_y']+group_data_table_2['rank'])/3\n",
+    "group_data_table_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,6 +664,7 @@
        "      <th>rank_x</th>\n",
        "      <th>rank_y</th>\n",
        "      <th>rank</th>\n",
+       "      <th>rank_z</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -456,7 +675,8 @@
        "      <td>aa7eee0e03f628ac98597cfb357a5f4d</td>\n",
        "      <td>0.988095</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.994048</td>\n",
+       "      <td>0.988095</td>\n",
+       "      <td>0.992063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -464,7 +684,8 @@
        "      <td>832a5f89fa94d34aa63d1c790f250e1e</td>\n",
        "      <td>0.964286</td>\n",
        "      <td>0.916667</td>\n",
-       "      <td>0.940476</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>0.952381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -472,23 +693,26 @@
        "      <td>9d0917fe2aeec95b5b0bb661b24fb7c5</td>\n",
        "      <td>0.976190</td>\n",
        "      <td>0.714286</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.896825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
+       "      <td>42049532325f80aeed9186b9c571dd22</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>0.809524</td>\n",
+       "      <td>0.940476</td>\n",
        "      <td>0.845238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>21</th>\n",
        "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>b9a223fa5d0de6f92aa291483f3214ba</td>\n",
-       "      <td>0.702381</td>\n",
-       "      <td>0.964286</td>\n",
-       "      <td>0.833333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>002a5c1d9a6a49a2127bbabe2b1a2f99</td>\n",
-       "      <td>4f31eaaf1629bf822f482be7b2f7a90a</td>\n",
-       "      <td>0.785714</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.809524</td>\n",
+       "      <td>ac2768f3be0725276390ce732afffb5f</td>\n",
+       "      <td>0.726190</td>\n",
+       "      <td>0.892857</td>\n",
+       "      <td>0.869048</td>\n",
+       "      <td>0.829365</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -499,34 +723,54 @@
        "0 1   002a5c1d9a6a49a2127bbabe2b1a2f99  aa7eee0e03f628ac98597cfb357a5f4d   \n",
        "  3   002a5c1d9a6a49a2127bbabe2b1a2f99  832a5f89fa94d34aa63d1c790f250e1e   \n",
        "  2   002a5c1d9a6a49a2127bbabe2b1a2f99  9d0917fe2aeec95b5b0bb661b24fb7c5   \n",
-       "  25  002a5c1d9a6a49a2127bbabe2b1a2f99  b9a223fa5d0de6f92aa291483f3214ba   \n",
-       "  11  002a5c1d9a6a49a2127bbabe2b1a2f99  4f31eaaf1629bf822f482be7b2f7a90a   \n",
+       "  6   002a5c1d9a6a49a2127bbabe2b1a2f99  42049532325f80aeed9186b9c571dd22   \n",
+       "  21  002a5c1d9a6a49a2127bbabe2b1a2f99  ac2768f3be0725276390ce732afffb5f   \n",
        "\n",
-       "        rank_x    rank_y      rank  \n",
-       "0 1   0.988095  1.000000  0.994048  \n",
-       "  3   0.964286  0.916667  0.940476  \n",
-       "  2   0.976190  0.714286  0.845238  \n",
-       "  25  0.702381  0.964286  0.833333  \n",
-       "  11  0.785714  0.833333  0.809524  "
+       "        rank_x    rank_y      rank    rank_z  \n",
+       "0 1   0.988095  1.000000  0.988095  0.992063  \n",
+       "  3   0.964286  0.916667  0.976190  0.952381  \n",
+       "  2   0.976190  0.714286  1.000000  0.896825  \n",
+       "  6   0.785714  0.809524  0.940476  0.845238  \n",
+       "  21  0.726190  0.892857  0.869048  0.829365  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = group_data_table.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"rank\",ascending=False))\n",
+    "result = group_data_table_2.groupby(\"user_id\",as_index=False).apply(lambda x:x.sort_values(\"rank_z\",ascending=False))\n",
     "result.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result[[\"user_id\",\"jd_no\"]].to_csv(\"submission3_vivi.csv\",index=False)"
+    "result[[\"user_id\",\"jd_no\"]].to_csv(\"submission3_du.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29674, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[[\"user_id\",\"jd_no\"]].shape"
    ]
   },
   {
